# veltrix-crawler

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  recording-overlay.html  vite.config.ts
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/api/: auth.rs  commands.rs  devices.rs  error.rs  mod.rs  pair.rs  response.rs  v1.rs  ws.rs  ws_hub.rs
crates/core/src/config/: mod.rs
crates/core/src/db/: mod.rs
crates/core/src/db/entity/: account.rs  agent_route_log.rs  app_secret.rs  author.rs  chat_conversation.rs  chat_memory.rs  chat_message.rs  collect_log.rs  collect_record.rs  comment.rs  content.rs  content_synced_user.rs  customer.rs  industry.rs  keyword.rs  mod.rs  model_usage_record.rs  platform_api.rs  prompt.rs  prompt_category.rs  provider.rs  shot_prompt.rs  task.rs  task_run.rs  user.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
docs/: agent-platform-design.md
src/: App.css  App.tsx  index.css  main.tsx  recording-overlay.tsx
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: collect-remote.json  default.json  main-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapter/: bilibili.rs  douyin.rs  kuaishou.rs  mod.rs  tiktok.rs  xhs.rs  youtube.rs
src-tauri/src/agent/: browser.rs  coding.rs  mod.rs
src-tauri/src/agent/chat/: commands.rs  memory.rs  mod.rs
src-tauri/src/agent/coding/: commands.rs  mod.rs  tools.rs
src-tauri/src/agent/computer/: commands.rs  mod.rs  recorder.rs  tools.rs
src-tauri/src/agent/core/: llm.rs  mod.rs  react.rs  shared.rs  summary.rs
src-tauri/src/agent/desktop/: mod.rs  tools.rs
src-tauri/src/agent/fs/: mod.rs  tools.rs
src-tauri/src/agent/local/: commands.rs  mod.rs  tools.rs
src-tauri/src/agent/net/: mod.rs  tools.rs
src-tauri/src/agent/ocr/: mod.rs  tools.rs
src-tauri/src/agent/orchestrator/: commands.rs  mod.rs  tools.rs
src-tauri/src/agent/rpa/: commands.rs  mod.rs  tools.rs
src-tauri/src/agent/shell/: mod.rs  tools.rs
src-tauri/src/agent/system/: mod.rs  tools.rs
src-tauri/src/agent/uia/: mod.rs  tools.rs
src-tauri/src/cloud/: client.rs  config.rs  executor.rs  mod.rs  status.rs
src-tauri/src/commands/: admin.rs  billing.rs  browser.rs  chat.rs  chat_memory.rs  cloud.rs  coding.rs  collect.rs  conversation_summary.rs  creation.rs  dashboard.rs  mod.rs  task.rs
src-tauri/src/commands/collect/: enrich.rs  mod.rs  obsidian.rs
src-tauri/src/cookie/: mod.rs
src-tauri/src/llm/: agent.rs  chat.rs  embedding.rs  http.rs  intent.rs  mod.rs  provider.rs  role.rs  speech.rs
src-tauri/src/media/: mod.rs
src-tauri/src/model/: mod.rs
src-tauri/src/obsidian/: mod.rs
src-tauri/src/webview/: cookies.rs  mod.rs  native_intercept.rs  pool.rs  screenshot.rs  script_eval.rs  slider.rs
src/components/: Avatar.tsx  CodeField.tsx  ContentCard.tsx  DataTable.tsx  DataTableColumnHeader.tsx  DataTableFacetedFilter.tsx  DataTablePagination.tsx  DateRangePicker.tsx  DownloadHistory.tsx  EmptyState.tsx  ErrorBanner.tsx  ErrorBoundary.tsx  FacetedFilter.tsx  FieldError.tsx  IconBtn.tsx  ImageWaterfall.tsx  LocalFirstImage.tsx  MarkdownMessage.tsx  MediaStatusBadge.tsx  Pagination.tsx  ReasoningBlock.tsx  RecordingChip.tsx  RecordingOverlay.tsx  RefreshButton.tsx  RemoteConnect.tsx  SimpleTooltip.tsx  StatCard.tsx  StatusBadge.tsx  StepBadge.tsx  TitleBar.tsx  TrayPopup.tsx  WaterfallCard.tsx  animated-number.tsx  app-sidebar.tsx  chat-context.tsx  chat-memory-manager.tsx  code-editor.tsx  coding-layout.tsx  coding-work-panel.tsx  computer-layout.tsx  (+11 more)
src/components/charts/: AutoScrollList.tsx  DonutChart.tsx  ModelTrendChart.tsx  MultiTrendChart.tsx
src/components/ui/: alert-dialog.tsx  calendar.tsx  datetime-picker.tsx  dialog.tsx  progress.tsx  sheet.tsx  sidebar.tsx  sonner.tsx  table.tsx  tabs.tsx
src/hooks/: use-agent-step-listener.ts  use-chat.ts  use-mobile.ts  use-responsive-collapse.ts  use-screen-recording.ts  use-workspace-order.ts
src/lib/: api-types.ts  api.ts  download-history.ts  form-sizing.ts  password.ts  platforms.ts  updater.ts  utils.ts
src/pages/: AccountsPage.tsx  AuthorLibraryPage.tsx  BillingPage.tsx  ChatPage.tsx  CollectPage.tsx  CommentLibraryPage.tsx  ContentLibraryPage.tsx  ConversationsPage.tsx  CustomersPage.tsx  DashboardPage.tsx  IndustryPage.tsx  LoginPage.tsx  MemoryCenterPage.tsx  PlaceholderPage.tsx  PlatformsPage.tsx  PromptStudioPage.tsx  SettingsPage.tsx  SetupWizard.tsx  TaskDetailPage.tsx  TaskFormSheet.tsx  UserCenterPage.tsx  UsersPage.tsx  collect-meta.tsx  settings-meta.ts  settings-providers.tsx  settings-shared.tsx
