[package]
name = "veltrix-crawler"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "veltrix_crawler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 抽出的不依赖 Tauri 的共享后端库(配置 / 错误 / 数据库 / HTTP API)
veltrix-core = { path = "../crates/core" }
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# 自动更新:启动/手动检查 GitHub Releases 的 latest.json,验签后下载安装
tauri-plugin-updater = "2"
# relaunch:更新安装后重启应用
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 异步运行时:采集调度与并发请求依赖 tokio
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "net",
    "process",
    "io-util",
] }
# HTTP 采集器;用 rustls 避免在 Windows 上引入 openssl 编译依赖
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "gzip",
    "brotli",
    "cookies",
    "stream",
    "rustls-tls",
] }
anyhow = "1"
thiserror = "2"
# 适配器 trait 需要 async 方法且作为 trait object 注册,原生 async fn in trait 不满足 dyn 安全
async-trait = "0.1"
# ORM:运行时按连接串二选一支持 SQLite / PostgreSQL;rustls 与 reqwest 保持一致避免引入 openssl
sea-orm = { version = "1", default-features = false, features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 对外 HTTP API:版本化路由 + 统一响应;与现有 tokio / SeaORM 栈一致
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
# JWT 接口鉴权
jsonwebtoken = "9"
# 密码哈希
argon2 = "0.5"
# 云端连接:WebSocket 客户端 + sink/stream 拆分
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
# 语音转写:把本地音频读出后 base64 内联进 MiMo input_audio 请求体
base64 = "0.22"

# Windows 真实滚轮:WebView2 窗口化宿主没有 SendMouseInput(那是合成宿主才有),
# 改用 PostMessage WM_MOUSEWHEEL 给渲染子窗口投递真实滚轮消息触发懒加载;
# 后台并发窗口也能滚、不劫持物理鼠标。版本与 Tauri 内部 windows crate 对齐(0.61)。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    # 原生网络拦截:读 WebView2 响应内容流(IStream)需要 COM
    "Win32_System_Com",
] }
# WebView2 原生网络拦截:与 Tauri 内部对齐的版本,避免 ICoreWebView2 类型冲突
webview2-com = "0.38"

# macOS WKWebView 原生网络拦截 + 账号隔离:用 WKScriptMessageHandler 把页面 hook 到的
# 接口响应直接回传 Rust(等价于 Windows 的 WebResourceResponseReceived),不走 Tauri invoke,
# 规避外部页面 IPC 权限/注入时序问题。版本与 wry / tauri 内部 objc2 对齐,避免类型冲突。
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
# block2:WKWebsiteDataStore 清数据等异步方法的 completion handler 需要 block
block2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSString",
    "NSDate",
    "NSSet",
    "NSUUID",
] }
objc2-web-kit = { version = "0.3", default-features = false, features = [
    "std",
    "WKUserContentController",
    "WKScriptMessage",
    "WKScriptMessageHandler",
    # 按 data_store_identifier 清空某账号登录态(对应 Windows 删数据目录)
    "WKWebsiteDataStore",
] }

