[package]
name = "veltrix-crawler"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "veltrix_crawler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 抽出的不依赖 Tauri 的共享后端库(配置 / 错误 / 数据库 / HTTP API)
veltrix-core = { path = "../crates/core" }
# unstable:启用多 webview(Window::add_child),用于把 RPA 浏览器 Agent 的真实 webview 内嵌到主窗口右栏。
# 注意:开启后 Tauri 内部对所有 WebviewWindow 改用「窗口+子 webview」实现,需回归验证采集窗口。
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
# 自动更新:启动/手动检查 GitHub Releases 的 latest.json,验签后下载安装
tauri-plugin-updater = "2"
# relaunch:更新安装后重启应用
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 异步运行时:采集调度与并发请求依赖 tokio
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "net",
    "process",
    "io-util",
] }
# HTTP 采集器;用 rustls 避免在 Windows 上引入 openssl 编译依赖
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "gzip",
    "brotli",
    "cookies",
    "stream",
    "rustls-tls",
] }
anyhow = "1"
thiserror = "2"
# 适配器 trait 需要 async 方法且作为 trait object 注册,原生 async fn in trait 不满足 dyn 安全
async-trait = "0.1"
# ORM:运行时按连接串二选一支持 SQLite / PostgreSQL;rustls 与 reqwest 保持一致避免引入 openssl
sea-orm = { version = "1", default-features = false, features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# 对外 HTTP API:版本化路由 + 统一响应;与现有 tokio / SeaORM 栈一致
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
# JWT 接口鉴权
jsonwebtoken = "9"
# 密码哈希
argon2 = "0.5"
# 云端连接:WebSocket 客户端 + sink/stream 拆分
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
# 语音转写:把本地音频读出后 base64 内联进 MiMo input_audio 请求体
base64 = "0.22"

# 桌面操作 Agent 工具(electron 之外的「电脑操作」基础设施),三平台通用:
# enigo  — 跨平台鼠标 / 键盘合成(Win SendInput、mac CGEvent、Linux x11rb)
# xcap   — 跨平台截屏 / 列窗口(返回 image::RgbaImage)
# arboard— 跨平台系统剪贴板读写
# image  — 保存截图 PNG(版本与 xcap / arboard 内部对齐,避免重复编译)
enigo = "0.6"
xcap = { version = "0.9", features = ["image"] }
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png"] }

# 效率工具(跨平台纯 Rust):文件系统遍历(walkdir)+ 系统 / 进程信息(sysinfo)
walkdir = "2"
sysinfo = "0.39"

# Windows 真实滚轮:WebView2 窗口化宿主没有 SendMouseInput(那是合成宿主才有),
# 改用 PostMessage WM_MOUSEWHEEL 给渲染子窗口投递真实滚轮消息触发懒加载;
# 后台并发窗口也能滚、不劫持物理鼠标。版本与 Tauri 内部 windows crate 对齐(0.61)。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    # 原生网络拦截:读 WebView2 响应内容流(IStream)需要 COM
    "Win32_System_Com",
    # 应用内预览截图:CapturePreview 写入内存流需 CreateStreamOnHGlobal
    "Win32_System_Com_StructuredStorage",
    # 屏幕 OCR(agent/ocr):WinRT Windows.Media.Ocr 链路
    "Foundation",          # IAsyncOperation.get() 同步等待
    "Media_Ocr",           # OcrEngine / OcrResult
    "Graphics_Imaging",    # SoftwareBitmap / BitmapDecoder
    "Storage_Streams",     # InMemoryRandomAccessStream / DataWriter
    # UI 控件读取(agent/uia):UI Automation 客户端 COM 接口
    "Win32_UI_Accessibility",
] }
# WebView2 原生网络拦截:与 Tauri 内部对齐的版本,避免 ICoreWebView2 类型冲突
webview2-com = "0.38"

# macOS WKWebView 原生网络拦截 + 账号隔离:用 WKScriptMessageHandler 把页面 hook 到的
# 接口响应直接回传 Rust(等价于 Windows 的 WebResourceResponseReceived),不走 Tauri invoke,
# 规避外部页面 IPC 权限/注入时序问题。版本与 wry / tauri 内部 objc2 对齐,避免类型冲突。
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
# block2:WKWebsiteDataStore 清数据等异步方法的 completion handler 需要 block
block2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSString",
    "NSDate",
    "NSSet",
    "NSUUID",
] }
objc2-web-kit = { version = "0.3", default-features = false, features = [
    "std",
    "WKUserContentController",
    "WKScriptMessage",
    "WKScriptMessageHandler",
    # 按 data_store_identifier 清空某账号登录态(对应 Windows 删数据目录)
    "WKWebsiteDataStore",
] }

